# vonal-rust

./: Cargo.toml  POSSIBLE_ENVS_TO_OWERWRITE.md  README.md
.github/workflows/: build.yml
src/: app.rs  common.rs  main.rs  state.rs
src/plugins/: calculator.rs  mod.rs
src/plugins/application_launcher/: mod.rs
src/plugins/application_launcher/finder/: mod.rs
src/plugins/application_launcher/indexer/: desktop_indexer.rs  mod.rs  traits.rs
src/plugins/launcher/: mod.rs
src/plugins/launcher/finder/: fuzzy.rs
src/plugins/launcher/indexer/: desktop.rs  desktop_indexer.rs  traits.rs
src/plugins/math/: mod.rs
src/vonal_client/: main.rs
src/vonal_daemon/: app.rs  main.rs
src/vonal_daemon/config/: mod.rs  watcher.rs
src/vonal_daemon/plugins/: mod.rs
src/vonal_daemon/plugins/launcher/: cache.rs  mod.rs
src/vonal_daemon/plugins/launcher/finder/: fuzzy.rs  limited_selection_sort.rs  mod.rs
src/vonal_daemon/plugins/launcher/indexer/: desktop.rs  mod.rs  path.rs
src/vonal_daemon/plugins/math/: mod.rs
src/vonal_daemon/plugins/pass/: mod.rs
src/vonal_daemon/theme/: list.rs
src/vonal_daemon/theme/list/: list_state.rs  list_ui.rs  list_widget.rs  mod.rs  row_ui.rs
src/vonal_daemon/utils/: clipboard.rs
src/vonal_daemon/windowing/: mod.rs
