[package]
name = "vonal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vonal"
path = "src/vonal_daemon/main.rs"

[[bin]]
name = "vonalc"
path = "src/vonal_client/main.rs"

[features]
default = ["launcher_plugin", "math_plugin", "pass_plugin"]
launcher_plugin = ["freedesktop-desktop-entry", "regex"]
math_plugin = []
pass_plugin = []

[dependencies]
egui = "0.21.0"
egui_extras = { version = "0.21.0", features = ["svg"] }
poll-promise = "0.2.0"
egui_glow = { version = "0.21.0", features = ["clipboard", "winit"] }
glutin = { version = "0.30.3", features = ["x11"] }
glutin-winit = { version = "0.3.0", features = ["x11"] }
winit = { version = "0.28.3", features = ["x11"] }

# configuration
toml = "0.7.2"
inotify = "0.10.0"

# launcher_plugin
freedesktop-desktop-entry = { version = "0.5.0", optional = true }
regex = { version = "1.6.0", optional = true }
raw-window-handle = "0.5.0"
x11 = { version = "2.20.1", features = ["xlib"] }
derive_more = "0.99.17"
